--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.freemarker.template-loader-path: /
 spring.freemarker.suffix: .ftl
+server.port=9797
+
+logging.level.com.fasterxml.jackson=TRACE
