--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>spring-boot-example</name>
-    <description>Demo project for Spring Boot</description>
-
+    <name>ticktacktoe-kotlin</name>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -23,7 +21,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <kotlin.version>1.1.4-3</kotlin.version>
+        <kotlin.version>1.2.30</kotlin.version>
     </properties>
 
 
