changes for dto use in android app

--- a/ticktacktoe-dto/pom.xml
+++ b/ticktacktoe-dto/pom.xml
@@ -11,6 +11,14 @@
 
     <artifactId>ticktacktoe-dto</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.fasterxml.jackson.module</groupId>
+            <artifactId>jackson-module-kotlin</artifactId>
+            <version>2.9.1</version>
+        </dependency>
+    </dependencies>
+
     <build>
         <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
         <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
